Fix the test